@@ -1,3 +1,10 @@
+Wed May 16 05:59:33 GMT 2012  Olly Betts <olly@survex.com>
+
+	* .gitignore,Makefile.am,bin/Makefile.mk,bin/questletor.cc,
+	  examples/Makefile.mk,examples/questletor.cc: Move questletor from
+	  examples/ to bin/ and hook xapian-letor-update into the build
+	  system.
+
 Wed May 16 05:52:28 GMT 2012  Olly Betts <olly@survex.com>
 
 	* bin/xapian-letor-update.cc: Add new tool which updates the extra
